--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Run tests
+        run: |
+          pip install pytest
+          pytest
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
